--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <div class="title">BSc Systems Engineer</div>
                 <div class="institution">Universidad Industrial de Santander</div>
                 <div class="date">March 2022 – December 2026 (expected)</div>
-                <div class="gpa">GPA: <span>3.85/5.0</span></div>
+                <!-- <div class="gpa">GPA: <span>3.85/5.0</span></div> -->
                 <h3>Courses included:</h3>
                 <ul>
                     <li>Digital Image Processing</li>
